--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
     "axios": "^0.21.1",
+    "cookie-session": "^1.4.0",
     "craco": "^0.0.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "node": "^16.1.0",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
+    "pg": "^8.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -25,6 +33,7 @@
   },
   "scripts": {
     "start": "craco start",
+    "server": "nodemon --watch server server/server.js",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
